feat: persistent errors for job processing [DHIS2-15276]